fix(ui): Fix filter btn-group outline on Safari

--- a/frappe/public/scss/desk/filters.scss
+++ b/frappe/public/scss/desk/filters.scss
@@ -1,6 +1,6 @@
-.filter-icon.active {
-	--icon-stroke: var(--text-on-blue);
-}
+// .filter-icon.active {
+// 	--icon-stroke: var(--text-on-blue);
+// }
 
 .filter-popover {
 	min-width: 500px;
